week3/node
ben@ubuntu:~/Desktop/week3$ vi 3-2.c
ben@ubuntu:~/Desktop/week3$ gcc -g 3-2.c -o 3-2
ben@ubuntu:~/Desktop/week3$ ./3-2
file fd =3
ben@ubuntu:~/Desktop/week3$ cat 3-1.c 3-2.c
#include <stdio.h>
#include<sys/types.h>
#include<sys/stat.h>
#include<unistd.h>
#include<string.h>
#include<fcntl.h>
int main()
{
	int fd;
	fd = open("./text.txt",O_CREAT,0644);
	printf("file fd =%d\n",fd);
	close(fd);
	return 0;
}

#include <stdio.h>
#include<sys/types.h>
#include<sys/stat.h>
#include<unistd.h>
#include<string.h>
#include<fcntl.h>
int main()
{
	FILE *fp;
	fp = fopen("./text1.txt","w");
	printf("file fd =%d\n",fp->_fileno);
	fclose(fp);
	return 0;
}

ben@ubuntu:~/Desktop/week3$ cp 3-2.c ch02.h
ben@ubuntu:~/Desktop/week3$ vi ch02.h
ben@ubuntu:~/Desktop/week3$ vi 3-3.c
ben@ubuntu:~/Desktop/week3$ gcc -g 3-3.c -o 3-3
3-3.c: In function ‘main’:
3-3.c:9:2: error: expected expression before ‘|’ token
  | perror("open failed!\n");
  ^
3-3.c:10:6: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
  ret = fgets(buf,sizeof(buf),stdin);
      ^
ben@ubuntu:~/Desktop/week3$ vi 3-3.c
ben@ubuntu:~/Desktop/week3$ gcc -g 3-3.c -o 3-3
3-3.c: In function ‘main’:
3-3.c:10:6: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
  ret = fgets(buf,sizeof(buf),stdin);
      ^
ben@ubuntu:~/Desktop/week3$ ./3-3

actual reading 170132576 chars from input device.Content is 

ben@ubuntu:~/Desktop/week3$ ./3-3
123 456
actual reading 1198054272 chars from input device.Content is 123 456

ben@ubuntu:~/Desktop/week3$ vi 3-3.c
ben@ubuntu:~/Desktop/week3$ gcc -g 3-3.c -o 3-3
ben@ubuntu:~/Desktop/week3$ vi 3-3.c
ben@ubuntu:~/Desktop/week3$ ./3-3
2131 dsdsds
Content is 2131 dsdsds

ben@ubuntu:~/Desktop/week3$ vi text.txt
ben@ubuntu:~/Desktop/week3$ vi text1.txt

